bk_ida/gccida/g2/cpp_push_buffer
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.c:2298:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 * cpp_push_buffer( 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.c:2299:1: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_reader_0 *pfile, 
^~~~~~~~~~~~
cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.c:2308:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *object_base; // r9 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.c:2309:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *v11; // rax 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.c:2311:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *v13; // rax 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.c:2312:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *result; // rax 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.c:2323:31: error: expected expression
object_base = ( cpp_buffer_0 *)pfile->buffer_ob.object_base; 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.c:2323:17: error: use of undeclared identifier 'cpp_buffer_0'
object_base = ( cpp_buffer_0 *)pfile->buffer_ob.object_base; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.c:2324:23: error: expected expression
v11 = ( cpp_buffer_0 *)( next_free + 144); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/cpplib.c:2324:9: error: use of undeclared identifier 'cpp_buffer_0'
v11 = ( cpp_buffer_0 *)( next_free + 144); 
        ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_push_buffer/src/obj/cpplib.o] Error 1
